--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buchverwaltung für Claudia</title>
     <link rel="stylesheet" href="style.css">
+    
+    <!-- Meta-Tags für die Web-App -->
+    <link rel="apple-touch-icon" href="path/to/icon.png"> <!-- Pfad zu deinem App-Icon -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Bücherliste für Claudia">
 </head>
 <body>
     <div class="main-content">
